src/test/compile-fail/unsafe-fn-used-as-value.rs
// -*- rust -*-
// error-pattern: unsafe functions can only be called

unsafe fn f() { ret; }

fn main() {
    let x = f;
    x();
}
